# Objektinis-programavimas-2

./: CMakeLists.txt  README.md  Setup.msi  V1.1.cpp  V1.1.vcxproj  V1.2.cpp  V1.2.vcxproj  V1.5.vcxproj  V2.0.cpp  V2.0.vcxproj  header.cpp  header.h  listai.cpp  listai.h  lstudentas.cpp  lstudentas.h  studentas.cpp  studentas.h  testavimas.cpp  testavimas.h  v0.4.cpp  v0.4.vcxproj  v0.5.cpp  v0.5.vcxproj  v1.0.cpp  v1.0.vcxproj  vektoriai.cpp  vektoriai.h  zmogus.h
Doxygen/: Doxyfile
Doxygen/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  _v2_80_8cpp.html  annotated.html  class_lstudentas-members.html  class_lstudentas.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.hhc  index.hhk  index.hhp  index.html  klaidos_8cpp.html  klaidos_8h.html  klaidos_8h_source.html  listai_8cpp.html  listai_8h.html  listai_8h_source.html  lstudentas_8cpp.html  lstudentas_8h.html  lstudentas_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  studentas_8cpp.html  studentas_8h.html  studentas_8h_source.html  testavimas_8cpp.html  testavimas_8h.html  (+7 more)
Doxygen/latex/: _v2_80_8cpp.tex  annotated.tex  class_lstudentas.eps  class_lstudentas.tex  class_studentas.tex  class_zmogus.eps  class_zmogus.tex  files.tex  hierarchy.tex  klaidos_8cpp.tex  klaidos_8h.tex  listai_8cpp.tex  listai_8h.tex  lstudentas_8cpp.tex  lstudentas_8h.tex  (+8 more)
V2Test/: V2Test.vcxproj  test.cpp
(+43 files in other folders)
