cmake_minimum_required(VERSION 3.10)

project(V1.1 VERSION 1.1)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(V1.1 V1.1.cpp klaidos.h listai.h lstudentas.h studentas.h testavimas.h vektoriai.h klaidos.cpp listai.cpp lstudentas.cpp studentas.cpp testavimas.cpp vektoriai.cpp)
