cmake_minimum_required(VERSION 3.10)

project(V1.2 VERSION 1.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(V1.2 V1.2.cpp klaidos.h listai.h lstudentas.h studentas.h testavimas.h vektoriai.h klaidos.cpp listai.cpp lstudentas.cpp studentas.cpp testavimas.cpp vektoriai.cpp)
