cmake_minimum_required(VERSION 3.10)

project(V2.0 VERSION 2.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(V2.0 V2.0.cpp klaidos.h listai.h lstudentas.h studentas.h testavimas.h vektoriai.h zmogus.h klaidos.cpp listai.cpp lstudentas.cpp studentas.cpp testavimas.cpp vektoriai.cpp zmogus.cpp)
